[package]
name = "coordinator"
version = "1.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7.2"
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[dependencies.actix-web]
version = "3"
features = ["rustls"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

